Add meta refresh

--- a/themes/_cstate/layouts/partials/meta.html
+++ b/themes/_cstate/layouts/partials/meta.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta id="refresh" http-equiv="refresh" content="30">
     <!-- Data -->
     <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ .Summary }}{{ end }}">
     <title>{{ if eq .Title .Site.Title }}{{ .Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
