--- a/themes/_cstate/layouts/_default/single.html
+++ b/themes/_cstate/layouts/_default/single.html
@@ -1,13 +1,14 @@
 {{ partial "meta" . }}
-
-  <body>
+  <body class="default single">
     <div class="contain">
-      <a href="{{ .Site.BaseURL }}">← Go back</a>
-      <hr>
-      {{ .Render "post" }}
+      <a href="{{ .Site.BaseURL }}">← {{ T "goBack" }} <em>{{ .Site.Title }}</em></a>
+      
+      <div class="padding"></div>
+
+      {{ .Content }}
     </div>
 
-
+    {{ partial "js" . }}
     {{ partial "footer" . }}
   </body>
 </html>
